# outlook-mail-responder

./: .dockerignore  .gitignore  Dockerfile  README.md  app.js  app.py  auth_helper.py  emailai.py  llama_client.py  ms_graph.py  ollama_service.py  outlook_email_responder.py  outlook_reader.py  package-lock.json  package.json  pyproject.toml  user.py
config/: auth-config.js
public/css/: style.css
public/js/: main.js
routes/: auth.js  emails.js  status.js
services/: calendar-processor.js  fallback-generator.js  ollama-service.js  status-checker.js
templates/: home.html
utils/: email-helpers.js  time-converter.js
views/: email-detail.ejs  emails.ejs  index.ejs  status.ejs
