[project]
name = "outlook-mail-responder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.114.0",
    "flask>=3.1.0",
    "langchain>=0.3.24",
    "msal>=1.32.0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "requests>=2.32.3",
]
